Backend - get my profile.
