# server/routes/userRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import {register, login, logout} from "../controllers/userController.js";
+import {register, login, logout, getMyProfile} from "../controllers/userController.js";
 import {singleAvatar} from "../middlewares/multer.js";
 import { isAuthenticated } from '../middlewares/authMiddleware.js';
 
@@ -10,6 +10,7 @@ router.post("/login", login);
 
 // ab jo bhi routes neeche hai wo protected honge to isAuthenticated middleware use karna padega
 router.use(isAuthenticated); 
+router.get("/me", getMyProfile);
 router.post("/logout", logout);
 
 export default router;
